scenarios/01-multi-namespace-grpc/00-client-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-client
  labels:
    app.kubernetes.io/part-of: demo
    team: client
